[package]
name = "mchttp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
lazy_static = "1.4.0"
native-tls = "0.2.12"
regex = "1.10.4"
tokio = {version = "1.37.0", features=["full"]}
tokio-native-tls = "0.3.1"
tokio-rustls = "0.26.0"
urlencoding = "2.1.3"
