[package]
name = "mchttp"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
lazy_static = "1.4.0"
regex = "1.10.4"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
tokio = {version = "1.37.0", features=["full"]}
tokio-rustls = "0.26.0"
urlencoding = "2.1.3"
